migrate to SASS

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
         <option value="Standards" />
       </datalist>
 
-      <ul class="quick-search">
+      <ul class="quick-filters">
         <li>CSS</li>
         <li>JS</li>
         <li>PHP</li>
