update header url to github pages

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
       </ul>
     </aside>
 
-    <h1 class="hero-title"><a href="/">
+    <h1 class="hero-title"><a href="//quickenloans.github.io">
       <span>{</span>
         <strong><em title="Quicken Loans">QL</em></strong><span>:</span>
         <code>code</code>
