--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!doctype html />
+<!doctype html>
 <html class="no-flexbox-support">
 <head>
   <meta charset="utf-8" />
@@ -37,11 +37,11 @@
       <input class="search-box" id="filter" list="prefilled-search" name="filter" type="search" />
 
       <datalist id="prefilled-search">
-        <option value="CSS" />
-        <option value="JS" />
-        <option value="PHP" />
-        <option value=".NET" />
-        <option value="Standards" />
+        <option value="CSS"></option>
+        <option value="JS"></option>
+        <option value="PHP"></option>
+        <option value=".NET"></option>
+        <option value="Standards"></option>
       </datalist>
 
       <ul class="quick-filters">
