finalize linting fixes and added styles

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
 
       <datalist id="prefilled-search">
         <option value="CSS"></option>
-        <option value="JS"></option>
+        <option value="JavaScript"></option>
         <option value="PHP"></option>
         <option value=".NET"></option>
         <option value="Standards"></option>
