fixed path to rocklib repo

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ Panthor uses the simplicity of Slim and provides a bit more structure for applic
 
   <footer class="c-ProjectCard__footer">
     <a class="c-ProjectCard__button c-Button " href="http://www.rockframework.org/">Project</a>
-    <a class="c-ProjectCard__button c-Button" href="https://github.com/RockFramework">Repo</a>
+    <a class="c-ProjectCard__button c-Button" href="https://github.com/rocklib">Repo</a>
   </footer>
 </article>
 
